Re-sized images
Targeted graphics in CSS, no animations added yet

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>Asteroids!</title>
-	<link rel="stylesheet" href="css/main.css">
+ <link href="css/grid.css" rel="stylesheet">
+    <link href="css/type.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body class="black">
+
+	<div class="stars"></div>
 
 <img src="images/asteroid.svg" class="asteroid">
 <img src="images/ship.svg" class="ship">
